FIX: Increase spacing between 'Delete selected' link and the preceding question [q12137]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@18154 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -2167,3 +2167,7 @@ a.BrowseRefresh{
 }
 
 .Question input[name="antispam_user_code"] { position: absolute; left: -2000px; }
+
+#ShareDeleteForm .ListViewBulkActions {
+    padding-top: 20px;
+    }
